--- a/404.html
+++ b/404.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>特特萌(tete.moe)</title>
-        <meta http-equiv="Refresh" content="3;url=http://www.zhinanglicai.com/">
+        <meta http-equiv="Refresh" content="5;url=https://tete.moe/">
     </head>
      
     <body>
     <h1>特特萌找不到这个页面~</h1>
-    <p>由于网站版本更新，您访问的原地址可能出现错误，即将返回<a href="https://tete.moe/">特特萌首页</a></p>
-    <p>如果在3秒钟后网页没有自动跳转，请点击上面的链接，智囊理财网站首页。</p>
+    <p><a href="https://tete.moe/">返回特特萌首页</a></p>
     </body>
     </html>
