--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     </head>
      
     <body>
-    <h1>特特萌找不到这个页面~</h1>
+    <h1>找不到这个页面~</h1>
     <p><a href="https://tete.moe/">返回特特萌首页</a></p>
     </body>
     </html>
