--- a/elemehongbao.html
+++ b/elemehongbao.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html><!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="zh">
   <head>
-    <script type="text/javascript" src="test.js"></script>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>饿了么红包,饿了么优惠券,饿了么8元10元15元60元红包优惠券,饿了么会员、会员红包、会员卡-饿了么红包哪里可以天天领？特特萌(tete.moe)</title>
     <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡">
