--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html><!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="zh">
   <head>
-    <script type="text/javascript" src="test.js"></script>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>饿了么红包,饿了么优惠券,饿了么8元10元15元60元红包优惠券,饿了么会员、会员红包、会员卡-饿了么红包哪里可以天天领？特特萌(tete.moe)</title>
-    <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡">
-    <meta name="Description" content="特特萌(tete.moe)特特萌(tete.moe)有免费饿了么优惠券领取，有最新2021年9月饿了么红包,饿了么优惠券,饿了么8元10元15元红包优惠券,饿了么会员、会员红包、会员卡，更多饿了么代金券和饿了么优惠券团购请访问特特萌">
+    <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡，电子书下载，各类电商平台优惠券。">
+    <meta name="Description" content="特特(tete.moe)特特(tete.moe)有免费饿了么优惠券领取，有最新2021年9月饿了么红包,饿了么优惠券,饿了么8元10元15元红包优惠券,饿了么会员、会员红包、会员卡，更多饿了么代金券和饿了么优惠券团购，电子书下载，各类电商平台优惠券请访问特特">
   </head>
   <body>
     <a href="elemehongbao.html"><h1>饿了么红包免费领取</h1></a>
