--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
-    <!doctype html>
-    <html>
+    <!DOCTYPE html>
+    <html lang="zh">
     <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>特特萌(tete.moe)</title>
+    <title>特特(tete.moe)</title>
     </head>
      
     <body>
     <h1>找不到这个页面~</h1>
-    <p><a href="https://tete.moe/">返回特特萌首页</a></p>
+    <p><a href="https://tete.moe/">返回特特首页</a></p>
     </body>
     </html>
