--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>饿了么红包,饿了么优惠券,饿了么8元10元15元60元红包优惠券,饿了么会员、会员红包、会员卡-饿了么红包哪里可以天天领？特特萌(tete.moe)</title>
     <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡，电子书下载，各类电商平台优惠券。">
