--- a/elemehongbao.html
+++ b/elemehongbao.html
@@ -16,5 +16,6 @@
     <p>2、然后扫描下方的二维码图片，就可以领取到大红包了，最高20元哦!</p>
     <p>3、另外，大家还可以直接使用支付宝APP扫码，也是可以领取红包的。</p>
     <img src='pic.png' alt='饿了么红包免费领取。《饿了么》扫码领红包方法。'/>
+    <p></p><a alt="特特萌首页" href="tete.moe">返回特特首页</a></p>
   </body>
 </html>
