--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>特特(tete.moe)</title>
+    <title>红包饿了么hbele.me</title>
     </head>
      
     <body>
     <h1>找不到这个页面~</h1>
-    <p><a href="https://tete.moe/">返回特特首页</a></p>
+    <p><a href="https://hbele.me/">返回红包饿了么首页</a></p>
     </body>
     </html>
