--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>饿了么红包,饿了么优惠券,饿了么8元10元15元60元红包优惠券,饿了么会员、会员红包、会员卡-饿了么红包哪里可以天天领？特特萌(tete.moe)</title>
-    <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡，电子书下载，各类电商平台优惠券。">
-    <meta name="Description" content="特特(tete.moe)特特(tete.moe)有免费饿了么优惠券领取，有最新2021年9月饿了么红包,饿了么优惠券,饿了么8元10元15元红包优惠券,饿了么会员、会员红包、会员卡，更多饿了么代金券和饿了么优惠券团购，电子书下载，各类电商平台优惠券请访问特特">
+    <title>饿了么扫码领红包方法_饿了么红包二维码怎么扫_饿了么二维码怎么扫码领红包_hbele.me</title>
+    <meta name="Keywords" content="饿了么红包,饿了么优惠券,饿了么8元10元15元20元红包优惠券,饿了么会员、会员红包、会员卡">
+    <meta name="description" content="饿了么扫码领红包的活动已经进行到一段时间了，很多用户还不知道在哪里可以扫码领红包，可是有最高20元的红包哦，或许就能吃到一个免单的外卖呢！下面小编为大家带来关于饿了么红包二维码怎么扫的相关介绍，希望可">
   </head>
   <body>
-    <a href="elemehongbao.html"><h1>饿了么红包免费领取</h1></a>
+    <h1>饿了么红包免费领取</h1>
+    <h2>记住本域名红包饿了么hbele.me天天领红包</h2>
+    <p>1、打开饿了么APP，在首页点击右上角的“扫一扫”图标。</p>
+    <p>2、然后扫描下方的二维码图片，就可以领取到大红包了哦!</p>
+    <p>3、另外，大家还可以直接使用支付宝APP扫码，也是可以领取红包的。</p>
+    <img src='pic.png' alt='饿了么红包免费领取。《饿了么》扫码领红包方法。'/>
   </body>
 </html>
