--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>饿了么红包免费领取</h1>
     <h2>记住本域名红包饿了么hbele.me天天领红包</h2>
+    <h2><a href="https://hbele.me/jdyhq/index.html">点此链接领取京东优惠券</a></h2>
     <p>1、打开饿了么APP，在首页点击右上角的“扫一扫”图标。</p>
     <p>2、然后扫描下方的二维码图片，就可以领取到大红包了哦!</p>
     <p>3、另外，大家还可以直接使用支付宝APP扫码，也是可以领取红包的。</p>
