--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
     <!DOCTYPE html>
     <html lang="zh">
     <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content= "width=device-width,initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>红包饿了么hbele.me</title>
