--- a/jdyhq/index.html
+++ b/jdyhq/index.html
@@ -14,6 +14,15 @@
 <li><a href="男装毛呢大衣.html" title="男装毛呢大衣"><strong>毛呢大衣</strong></a></li>
 <li><a href="男装男士风衣.html" title="男装男士风衣"><strong>男士风衣</strong></a></li>
 <li><a href="男装真皮皮衣.html" title="男装真皮皮衣"><strong>真皮皮衣</strong></a></li>
+<li><a href="男装马甲背心.html" title="男装马甲背心"><strong>马甲背心</strong></a></li>
+<li><a href="男装西服.html" title="男装西服"><strong>西服</strong></a></li>
+<li><a href="男装卫裤运动裤.html" title="男装卫裤运动裤"><strong>卫裤运动裤</strong></a></li>
+<li><a href="男装西裤.html" title="男装西裤"><strong>西裤</strong></a></li>
+<li><a href="男装大码男装.html" title="男装大码男装"><strong>大码男装</strong></a></li>
+<li><a href="男装羊绒衫.html" title="男装羊绒衫"><strong>羊绒衫</strong></a></li>
+<li><a href="男装设计师潮牌.html" title="男装设计师潮牌"><strong>设计师潮牌</strong></a></li>
+<li><a href="男装特殊商品.html" title="男装特殊商品"><strong>特殊商品</strong></a></li>
+<li><a href="男装短裤.html" title="男装短裤"><strong>短裤</strong></a></li>
 </ul></details>
 <details><summary>女装</summary><ul>
 <li><a href="女装女士棉服.html" title="女装女士棉服"><strong>女士棉服</strong></a></li>
