--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p>1、打开饿了么APP，在首页点击右上角的“扫一扫”图标。</p>
     <p>2、然后扫描下方的二维码图片，就可以领取到大红包了哦!</p>
     <p>3、另外，大家还可以直接使用支付宝APP扫码，也是可以领取红包的。</p>
-    <img src='pic.png' alt='饿了么红包免费领取。《饿了么》扫码领红包方法。'/>
+    <img style="max-width:100%;overflow:hidden;" src='pic.png' alt='饿了么红包免费领取。《饿了么》扫码领红包方法。'/>
   </body>
 </html>
