--- a/jd/index.html
+++ b/jd/index.html
@@ -17,8 +17,8 @@
         <table>
             <thead>
                 <tr>
-                    <th colspan="1">商品</th>
                     <th colspan="1">店家</th>
+                    <th colspan="1">商品</th>
                     <th colspan="3">优惠</th>
                     <th colspan="1">日期</th>
                 </tr>
@@ -26,6 +26,6 @@
             <tbody id="items">
             </tbody>
         </table>
-        
     </body>
+    <script type="application/javascript">Search();</script>
 </html>
