--- a/jdyhq/index.html
+++ b/jdyhq/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
         <title>京东优惠券</title>
         <meta name="description" content="京东优惠券在哪里领 一键领取 京东快递优惠券免费领取 京东手机优惠券 京东内部优惠券 京东隐藏优惠券哪里领取 怎么领取京东大额优惠券 京东优惠券直达链接方法	京东优惠券怎么分享 京东内部商城是真的吗 哪里有京东优惠券">
         <script type="application/javascript" src="itemList.js"></script>
